--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/LaraEk/FrondFinder/issues"
   },
-  "homepage": "https://github.com/LaraEk/FrondFinder#readme"
+  "homepage": "https://github.com/LaraEk/FrondFinder#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "path": "^0.12.7"
+  }
 }
